# OpenArm0.3_data

./: .gitignore  VLA_demo_guide.md  arm_magnetometer_dual.ino  check_npy.py  check_python_path.py  frames_2025-08-27_13.31.46.gv  frames_2025-09-21_03.01.03.gv  frames_2025-09-21_03.19.14.gv  joint_data.npy  joint_trajectory_20251231_163049.json  js_now.yaml  openarm 데모용 메뉴얼 v2  openarm_bimanual.gv  recorded_waypoints.json  recorded_waypoints_20250924_173027.json  recorded_waypoints_20250924_182946.json  recorded_waypoints_20250924_194619.json
checkpoints/smolvla_openarm_16dim/wandb/run-20260205_030408-lojcrokf/files/: config.yaml
src/openarm_arduino_bridge/: package.xml  pyproject.toml  setup.cfg  setup.py
src/openarm_arduino_bridge/config/: bridge.yaml
src/openarm_arduino_bridge/launch/: arduino_servo.launch.py  bimanual_arduino_servo.launch.py
src/openarm_arduino_bridge/openarm_arduino_bridge/: bimanual_bridge_node.py  bridge_node.py
src/openarm_bimanual_moveit_config/config/: moveit.rviz
src/openarm_bringup/: CMakeLists.txt  package.xml
src/openarm_bringup/config/: openarm_controllers.yaml
src/openarm_bringup/launch/: openarm.launch.py  teleop_serial.launch.py  test_trajectory.launch.py
src/openarm_bringup/scripts/: openarm_zero_offset_node.py  teleop_follower.py  teleop_serial_publisher.py
src/openarm_camera/: package.xml  pyproject.toml  setup.cfg  setup.py
src/openarm_camera/openarm_camera/: camera_subscriber_node.py
src/openarm_dataset_node/: package.xml  pyproject.toml  setup.cfg  setup.py
src/openarm_dataset_node/openarm_dataset_node/: encoder_reader.py
src/openarm_description/rviz/: robot_description.rviz
src/openarm_description/urdf/: openarm.robot.xacro  openarm.ros2_control.xacro  openarm.urdf  openarm.urdf.xacro  openarm_for_moveit.urdf
src/openarm_hardware/: CMakeLists.txt  package.xml
src/openarm_hardware/src/: canbus.cpp  motor.cpp  openarm_hardware.cpp
src/openarm_moveit_config/: CMakeLists.txt  package.xml
src/openarm_moveit_config/config/: ik_exec_params.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/openarm_moveit_config/launch/: move_group.launch.py
src/openarm_moveit_config/src/: openarm_ik_exec_node.py
src/openarm_moveit_config/srdf/: openarm.srdf
src/openarm_player/: package.xml  pyproject.toml  setup.cfg  setup.py
src/openarm_player/launch/: play_waypoints.launch.py
src/openarm_player/openarm_player/: player_node.py  teleop_magnetometer_node.py
src/openarm_recorder/: package.xml  pyproject.toml  setup.cfg  setup.py
src/openarm_recorder/launch/: record_waypoints.launch.py
src/openarm_recorder/openarm_recorder/: recorder_node.py
src/openarm_static_bimanual_bringup/: CMakeLists.txt  package.xml
src/openarm_static_bimanual_bringup/config/: openarm_static_bimanual_controllers.yaml  teleop_serial.yaml
src/openarm_static_bimanual_bringup/docs/: GRAVITY_COMPENSATION_METHOD.md  GRAVITY_COMP_GUIDE.md  GRIPPER_CONTROL_AND_DATA_COLLECTION_GUIDE.md  PROJECT_WORK_SUMMARY.md  SMOLVLA_DEPLOYMENT_GUIDE.md  TEACHING_AND_RECORDING_GUIDE.md  VLA_REMOTE_INFERENCE_GUIDE.md  task_prompts.txt
src/openarm_static_bimanual_bringup/launch/: gravity_comp_teaching.launch.py  lerobot_trajectory_recording.launch.py  lerobot_vla_collection.launch.py  lerobot_vla_recording.launch.py  lerobot_vla_replay.launch.py  play_bimanual_scenario.launch.py  sbopenarm.launch.py  smolvla_inference.launch.py  teleop_serial.launch.py  test_bimanual_trajectory.launch.py  test_forward_position_cotoller_binmanual.launch.py  test_joint_trajectory_controller_bimanual.launch.py  vla_remote_inference.launch.py
src/openarm_static_bimanual_bringup/scripts/: continuous_recorder_node.py  fake_camera_publisher.py  fmvla_data_record.py  gravity_comp_node.py  jsp_fpc_bridge.py  keyboard_gripper_controller.py  lerobot_trajectory_recorder.py  lerobot_vla_recorder.py  lerobot_vla_replay.py  lerobot_vla_replay_recorder.py  parquet_to_csv.py  simple_state_replay.py  smolvla_inference_node.py  teleop_serial_bridge.py  test_image_to_server.py  test_trajectory_node.py  trajectory_replay_node.py  vla_remote_client_node.py
src/openarm_static_bimanual_description/: CMakeLists.txt  package.xml
src/openarm_static_bimanual_description/config/: initial_positions.yaml
src/openarm_static_bimanual_description/launch/: description.launch.py  display.launch.py
src/openarm_static_bimanual_description/rviz/: openarm_bimanual.rviz
src/openarm_static_bimanual_description/urdf/: openarm_sb_robot.xacro  openarm_static_bimanual.urdf.xacro
src/openarm_static_bimanual_hardware/: .gitignore  CMakeLists.txt  openarm_static_bimanual_hardware_plugins.xml  package.xml
src/openarm_static_bimanual_hardware/include/openarm_static_bimanual_hardware/: motor_control.hpp  openarm_hw_flex.hpp  visibility_control.h
src/openarm_static_bimanual_hardware/src/: canbus.cpp  motor.cpp  motor_control.cpp  openarm_hw_flex.cpp
src/vla_server_inference/: fmvla_dummy_client.py  requirements.txt  start_server.sh  vla_inference_server.py
