<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm_static_bimanual_description</name>
  <version>0.0.1</version>
  <description>
    Description package for the OpenArm static bimanual robot.
    Contains URDF/Xacro models, meshes, launch files, and RViz configs.
  </description>

  <maintainer email="mintlabskh@todo.todo">mintlabskh</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps (topic 모드에서 package:// 해석에 필요) -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing (옵션) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
